# Chip8

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
assets/: chip8_layout.aseprite  fantasy-24.gpl  start-screen.aseprite
src/: Chip8.cpp  Chip8.hpp  fontset.hpp  main.cpp
